# csv2sc

./: .gitignore  Makefile.am  README  configure.ac
debian/: changelog  control
module/: Makefile.am
module/csv2sc/: cli.scm  csv2sc.scm  message.scm  program.scm
src/: Makefile.am  csv2sc  csv2sc.scm
